; ModuleID = '/home/carl/AnghaBench/qmk_firmware/users/narze/extr_superduper.c_set_superduper_key_combos.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/users/narze/extr_superduper.c_set_superduper_key_combos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@EECONFIG_SUPERDUPER_INDEX = common dso_local global i32 0, align 4
@superduper_combos = common dso_local global i32* null, align 8
@key_combos = common dso_local global %struct.TYPE_2__* null, align 8
@CB_SUPERDUPER = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @set_superduper_key_combos() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @EECONFIG_SUPERDUPER_INDEX, align 4
  %3 = call i32 @eeprom_read_byte(i32 %2)
  store i32 %3, i32* %1, align 4
  %4 = load i32, i32* %1, align 4
  switch i32 %4, label %15 [
    i32 129, label %5
    i32 130, label %5
    i32 128, label %5
  ]

5:                                                ; preds = %0, %0, %0
  %6 = load i32*, i32** @superduper_combos, align 8
  %7 = load i32, i32* %1, align 4
  %8 = sext i32 %7 to i64
  %9 = getelementptr inbounds i32, i32* %6, i64 %8
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** @key_combos, align 8
  %12 = load i64, i64* @CB_SUPERDUPER, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i64 %12
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  store i32 %10, i32* %14, align 4
  br label %15

15:                                               ; preds = %0, %5
  ret void
}

declare dso_local i32 @eeprom_read_byte(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
